--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
     crossorigin=""/>
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-     crossorigin=""></script>
     <style>
         #map {
             height: 100vh;
@@ -20,10 +17,11 @@
 <body>
     <div id="map"></div>
     <script type="module">
-        // import DraggableLines from 'leaflet-draggable-lines'
+        import L from 'https://esm.sh/leaflet@1.9.4';
+        import DraggableLines from 'https://esm.sh/leaflet-draggable-lines@1.0.3';
 
         // Initialize the map and set its view to your chosen geographical coordinates and a zoom level
-        var map = L.map('map').setView([64, 24], 10);
+        const map = L.map('map').setView([63.635308, 23], 6);
 
         // Add a tile layer to the map (the background map image)
         L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
@@ -35,6 +33,9 @@
             [63.635308, 23],
             [65.984461, 24.70641]
         ], { color: '#0000ff', weight: 10 }).addTo(map);
+
+        const draggable = new DraggableLines(map);
+        draggable.enable();
     </script>
 </body>
 </html>
